--- a/app/src/main/res/layout/dialog_choice_package_layout.xml
+++ b/app/src/main/res/layout/dialog_choice_package_layout.xml
@@ -93,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="20dp"
-            android:text="选择颜色"
+            android:text="选择规格"
             android:textColor="#333333"
             android:textSize="14sp" />
 
@@ -103,14 +103,14 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginBottom="31dp" />
+            android:layout_marginBottom="20dp" />
 
         <TextView
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="20dp"
-            android:text="选择尺码"
+            android:text="选择子规格"
             android:textColor="#333333"
             android:textSize="14sp" />
 
@@ -119,8 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="31dp" />
+            android:layout_marginRight="15dp"/>
 
 
         <TextView
