--- a/app/src/main/res/drawable/shape_bj_back.xml
+++ b/app/src/main/res/drawable/shape_bj_back.xml
@@ -3,12 +3,12 @@
     <!-- rectangle表示为矩形 -->
 
     <!-- 填充的颜色 -->
-    <solid android:color="#fff" />
+    <solid android:color="@color/color_ffffff" />
 
     <!-- 边框的颜色和粗细 -->
     <stroke
         android:width="1dp"
-        android:color="#fff" />
+        android:color="@color/color_ffffff" />
 
     <!-- android:radius 圆角的半径 -->
     <corners
