--- a/app/src/main/res/layout/item_home_commodity.xml
+++ b/app/src/main/res/layout/item_home_commodity.xml
@@ -45,6 +45,7 @@
             android:src="@drawable/icon_home_jq" />
 
         <TextView
+            android:id="@+id/tv_jf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimen_5dp"
@@ -53,6 +54,7 @@
             android:textSize="@dimen/sp_14" />
 
         <TextView
+            android:id="@+id/tv_je"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
