--- a/app/src/main/res/layout/item_shopping_rm.xml
+++ b/app/src/main/res/layout/item_shopping_rm.xml
@@ -14,12 +14,26 @@
         android:scaleType="fitXY"
         android:src="@mipmap/ic_10" />
 
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@id/iv"
+        android:layout_alignEnd="@id/iv"
+        android:layout_alignBottom="@id/iv"
+        android:padding="@dimen/dimen_5dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:text="XXXX运动手环XXXX运动手环XXXX运动手环"
+        android:textColor="@color/color_ffffff"
+        android:textSize="12sp" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/iv"
-        android:paddingVertical="@dimen/dp_10"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:paddingVertical="@dimen/dp_10">
 
         <ImageView
             android:id="@+id/icon_head"
@@ -30,7 +44,7 @@
             android:src="@drawable/icon_home_jq" />
 
         <TextView
-            android:id="@+id/tv_user"
+            android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
