--- a/app/src/main/res/layout/activity_order_affirm.xml
+++ b/app/src/main/res/layout/activity_order_affirm.xml
@@ -285,6 +285,7 @@
                         android:textSize="@dimen/sp_14" />
 
                     <TextView
+                        android:id="@+id/tv11"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/tv1"
@@ -312,7 +313,7 @@
             android:id="@+id/tv_syjf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="88888"
+            android:text="0"
             android:textColor="@color/color_ffffff"
             android:textSize="18sp" />
 
