--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -6,20 +6,31 @@
 
     <com.jxkj.fit_5a.conpoment.view.SquareImageView
         android:id="@+id/iv_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/dimen_2dp"
+        android:padding="1dp"
+        android:scaleType="center"
+        android:visibility="gone" />
+
+    <com.jxkj.fit_5a.conpoment.view.SquareImageView
+        android:id="@+id/iv_icon_add"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="@dimen/dimen_2dp"
         android:background="@drawable/line_stroke_f"
         android:padding="1dp"
-        android:scaleType="centerCrop" />
+        android:scaleType="center"
+        android:src="@drawable/icon_add_theme"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/iv_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:scaleType="center"
         android:padding="@dimen/dp_10"
+        android:scaleType="center"
         android:src="@drawable/icon_close" />
 
 </RelativeLayout>
