--- a/app/src/main/res/layout/fragment_home_two.xml
+++ b/app/src/main/res/layout/fragment_home_two.xml
@@ -176,10 +176,10 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_top_list"
                 android:layout_width="match_parent"
-                android:overScrollMode="never"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_10"
-                android:layout_marginTop="@dimen/dimen_20dp" />
+                android:layout_marginTop="@dimen/dimen_20dp"
+                android:overScrollMode="never" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -265,74 +265,76 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="@dimen/dimen_25dp"
-                        android:background="@drawable/bj_circle_fff_10">
+                        android:layout_height="match_parent">
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
+                            android:layout_marginTop="@dimen/dimen_25dp"
                             android:layout_weight="1"
+                            android:background="@drawable/bj_circle_fff_10zsx"
                             android:gravity="center_horizontal"
-                            android:orientation="vertical">
+                            android:orientation="horizontal">
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/common_margin_15"
-                                android:text="第2-3名"
-                                android:textColor="#884444"
-                                android:textSize="@dimen/sp_14" />
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:gravity="center_horizontal"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="@dimen/common_margin_15"
+                                    android:text="第2-3名"
+                                    android:textColor="#884444"
+                                    android:textSize="@dimen/sp_14" />
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="0dp"
+                                    android:layout_margin="@dimen/dp_10"
+                                    android:layout_weight="1"
+                                    android:src="@mipmap/ic_4" />
+
+                                <TextView
+                                    android:layout_width="@dimen/dimen_80dp"
+                                    android:layout_height="@dimen/dimen_20dp"
+                                    android:layout_marginBottom="@dimen/dimen_15dp"
+                                    android:background="@drawable/bj_circle_ffe29d_25"
+                                    android:gravity="center"
+                                    android:text="奖品名称"
+                                    android:textColor="#884444"
+                                    android:textSize="10sp" />
+
+                            </LinearLayout>
 
                             <ImageView
                                 android:layout_width="wrap_content"
-                                android:layout_height="0dp"
-                                android:layout_margin="@dimen/dp_10"
-                                android:layout_weight="1"
-                                android:src="@mipmap/ic_4" />
+                                android:layout_height="match_parent"
+                                android:layout_alignParentEnd="true"
+                                android:adjustViewBounds="true"
+                                android:src="@mipmap/ic_sanjian_z" />
+                        </RelativeLayout>
 
-                            <TextView
-                                android:layout_width="@dimen/dimen_80dp"
-                                android:layout_height="@dimen/dimen_20dp"
-                                android:layout_marginBottom="@dimen/dimen_15dp"
-                                android:background="@drawable/bj_circle_ffe29d_25"
-                                android:gravity="center"
-                                android:text="奖品名称"
-                                android:textColor="#884444"
-                                android:textSize="10sp" />
-
-                        </LinearLayout>
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:adjustViewBounds="true"
-                            android:src="@mipmap/ic_sanjian_z" />
-
-                        <View
-                            android:layout_width="154dp"
-                            android:layout_height="wrap_content" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:adjustViewBounds="true"
-                            android:src="@mipmap/ic_sanjiao_y" />
 
                         <LinearLayout
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_weight="1"
+                            android:layout_centerHorizontal="true"
+                            android:layout_weight="1.3"
+                            android:background="@drawable/bj_circle_fff_10_ss"
                             android:gravity="center_horizontal"
                             android:orientation="vertical">
+
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/dimen_15dp"
-                                android:text="第4-10名"
+                                android:text="第1名"
                                 android:textColor="#884444"
-                                android:textSize="@dimen/sp_14" />
+                                android:textSize="@dimen/dimen_20dp" />
 
                             <ImageView
                                 android:layout_width="wrap_content"
@@ -350,44 +352,60 @@
                                 android:text="奖品名称"
                                 android:textColor="#884444"
                                 android:textSize="10sp" />
-
                         </LinearLayout>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="154dp"
-                        android:layout_height="match_parent"
-                        android:layout_centerHorizontal="true"
-                        android:background="@drawable/bj_circle_fff_10"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical">
 
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/dimen_15dp"
-                            android:text="第1名"
-                            android:textColor="#884444"
-                            android:textSize="@dimen/dimen_20dp" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="0dp"
-                            android:layout_margin="@dimen/dp_10"
+                        <RelativeLayout
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginTop="@dimen/dimen_25dp"
                             android:layout_weight="1"
-                            android:src="@mipmap/ic_4" />
+                            android:background="@drawable/bj_circle_fff_10ysx"
+                            android:gravity="center_horizontal"
+                            android:orientation="horizontal">
 
-                        <TextView
-                            android:layout_width="@dimen/dimen_80dp"
-                            android:layout_height="@dimen/dimen_20dp"
-                            android:layout_marginBottom="@dimen/dimen_15dp"
-                            android:background="@drawable/bj_circle_ffe29d_25"
-                            android:gravity="center"
-                            android:text="奖品名称"
-                            android:textColor="#884444"
-                            android:textSize="10sp" />
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:gravity="center_horizontal"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="@dimen/common_margin_15"
+                                    android:text="第4-10名"
+                                    android:textColor="#884444"
+                                    android:textSize="@dimen/sp_14" />
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="0dp"
+                                    android:layout_margin="@dimen/dp_10"
+                                    android:layout_weight="1"
+                                    android:src="@mipmap/ic_4" />
+
+                                <TextView
+                                    android:layout_width="@dimen/dimen_80dp"
+                                    android:layout_height="@dimen/dimen_20dp"
+                                    android:layout_marginBottom="@dimen/dimen_15dp"
+                                    android:background="@drawable/bj_circle_ffe29d_25"
+                                    android:gravity="center"
+                                    android:text="奖品名称"
+                                    android:textColor="#884444"
+                                    android:textSize="10sp" />
+
+                            </LinearLayout>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:adjustViewBounds="true"
+                                android:src="@mipmap/ic_sanjiao_y" />
+                        </RelativeLayout>
                     </LinearLayout>
+
+
                 </RelativeLayout>
 
                 <TextView
@@ -463,9 +481,9 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_two_list"
-                    android:overScrollMode="never"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never" />
 
 
                 <TextView
